--- a/style.css
+++ b/style.css
@@ -217,3 +217,15 @@
                     Section.Services .Card-Grid .Card:hover P{
                     Color: Var(--White);
                     }
+
+                    @media(max-width:998px){
+                        html{
+                            font-size: 55%;
+                        }
+                    }
+
+                    @media(max-width:768px){
+                        html{
+                            font-size: 45%;
+                        }
+                    }
